--- a/solidstart-tanstackrouter/package.json
+++ b/solidstart-tanstackrouter/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "node .output/server/index.mjs",
+    "start": "vinxi start",
     "version": "vinxi version"
   },
   "dependencies": {
