--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^4.2.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
+  },
+  "volta": {
+    "node": "24.11.1",
+    "npm": "11.6.3"
   }
 }
